# agentdiff

./: .env.example  .gitignore  404.html  LICENSE  README.md  index.html  pyproject.toml
assets/: index-CzonINXw.js  index-UKOS8R8F.css  index-zR3K07CG.js
examples/: basic_usage.py  compare_prompts.py  langchain_example.py  oracle_setup.py
src/agentdiff/: __init__.py
src/agentdiff/api/: __init__.py  server.py
src/agentdiff/capture/: __init__.py  anthropic_hook.py  crewai_hook.py  generic_hook.py  langchain_hook.py  openai_hook.py
src/agentdiff/cli/: __init__.py  main.py
src/agentdiff/core/: __init__.py  cost_tracker.py  span.py  trace.py  tracer.py
src/agentdiff/diff/: __init__.py  cost_diff.py  renderer.py  semantic_diff.py  structural_diff.py
src/agentdiff/replay/: __init__.py  checkpoint.py  engine.py  mock_tools.py
src/agentdiff/storage/: __init__.py  base.py  oracle_store.py  sqlite_store.py
src/agentdiff/visualize/: __init__.py  cli_renderer.py  html_export.py  mermaid_export.py
tests/: __init__.py  test_diff.py  test_replay.py  test_tracer.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: CostChart.tsx  DiffView.tsx  Layout.tsx  MetricCard.tsx  SpanDetail.tsx  SpanTree.tsx  TraceCard.tsx  index.ts
web/src/pages/: Compare.tsx  Costs.tsx  Dashboard.tsx  Settings.tsx  TraceDetail.tsx  TraceList.tsx  index.ts
web/src/types/: index.ts
