[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdiff"
version = "0.1.0"
description = "Visual Diff & Replay Debugger for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgentDiff Contributors" }
]
keywords = [
    "ai",
    "agents",
    "debugging",
    "tracing",
    "diff",
    "llm",
    "openai",
    "anthropic",
    "langchain",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
oracle = [
    "oracledb>=2.0.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
langchain = [
    "langchain>=0.1.0",
]
crewai = [
    "crewai>=0.28.0",
]
all = [
    "agentdiff[oracle,semantic,api,openai,anthropic,langchain,crewai]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
agentdiff = "agentdiff.cli.main:main"

[project.urls]
Homepage = "https://github.com/agentdiff/agentdiff"
Documentation = "https://github.com/agentdiff/agentdiff#readme"
Repository = "https://github.com/agentdiff/agentdiff"
Issues = "https://github.com/agentdiff/agentdiff/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdiff"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=agentdiff --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
